# strat_king

./: .gitignore  GAME_DESIGN.md  README.md  run.sh  stop.sh
backend/: SPECIFICATION.md  package-lock.json  package.json
backend/app/controllers/: auth_controller.ts  matchmaking_controller.ts  matchmaking_websocket_controller.ts  matchmakings_controller.ts  webhooks_controller.ts
backend/app/models/: match.ts  matchmaking_queue.ts  player.ts
backend/app/services/: game_server_service.ts  matchmaking_service.ts  server_manager.ts  websocket_service.ts
backend/app/validators/: auth.ts  matchmaking.ts
backend/config/: auth.ts  cors.ts  transmit.ts
backend/database/migrations/: 1756561574765_create_players_table.ts  1756561608338_create_matches_table.ts  1756561670366_create_matchmaking_queues_table.ts  1756583499315_create_matches_table.ts  1756583579147_create_matchmaking_queues_table.ts  1756593553179_create_player_access_tokens_table.ts  1756598516638_create_add_server_secret_to_matches_table.ts  1756651393700_create_update_match_status_enums_table.ts
backend/start/: routes.ts  websocket.ts  ws_init.ts
backend/tests/functional/: auth.spec.ts  basic_matchmaking.spec.ts  match_creation.spec.ts  websocket.spec.ts  websocket_matchmaking.spec.ts
client/: Cargo.toml
client/src/: main.rs
client/stratking/: empty_example.tscn  icon.svg.import  project.godot  rust.gdextension  rust.gdextension.uid
client/stratking/addons/godot-bevy/: README.md
client/stratking/rust/: Cargo.toml  SPEC.md
client/stratking/rust/.cargo/: config.toml
client/stratking/rust/src/: client_logic.rs  example_button_binding.rs  lib.rs  main.rs
client/stratking/rust/src/gameplay/: example.rs
client/stratking/rust/src/networking/: README.md  events.rs  http.rs  manager.rs  mod.rs  plugin.rs  usage_example.rs  websocket.rs
client_2d/: Cargo.toml  README.md
client_2d/.github/workflows/: release.yaml
client_2d/src/: main.rs  networking.rs
client_2d/src/menus/: main.rs
client_2d/src/screens/: authentication.rs  connecting.rs  matchmaking.rs  mod.rs
client_lightyear_test/src/: main.rs
server/: Cargo.toml  Dockerfile  build-docker.sh
server/assets/maps/: simple_1v1.map.ron
server/src/: main.rs  map_init.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/gameplay/: map.rs  mod.rs  state.rs  structures.rs
