[package]
name = "minimal_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.1", features = ["bevy_render", "bevy_core_pipeline", "bevy_winit", "bevy_window"] }
lightyear = { version = "0.23.0", features = ["client", "netcode", "replication", "udp"] }
minimal_shared = { version = "0.1.0", path = "../shared" }
