[package]
name = "strat_king_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.1", default-features = false }
lightyear = { version = "0.23.0", features = ["server", "netcode", "replication", "udp"] }
shared = { version = "0.1.0", path = "../shared" }
