[package]
name = "strat_king_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.1", default-features = false }
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
lightyear = { version = "0.23.0", features = ["server", "netcode", "replication", "udp"] }
shared = { version = "0.1.0", path = "../shared" }
reqwest = { version = "0.12.0", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.47.1"
# tokio = { version = "1.0", features = ["full"] }
