[package]
name = "strat_king"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
bevy-tokio-tasks = "0.16"
futures-util = "0.3.31"
godot = "0.3"
godot-bevy = { version = "0.9.0", features = ["default"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = "1.47.1"
tokio-tungstenite = "0.27.0"

[workspace]
# Empty workspace table to make this a standalone project
