[package]
name = "strat_king"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "strat_king"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.1", features = ["bevy_render", "bevy_core_pipeline", "bevy_winit", "bevy_window", "bevy_state"] }
bevy-tokio-tasks = { version = "0.16", default-features = false }
futures-util = "0.3.31"
godot = "0.3"
godot-bevy = { path = "/home/phaack/temp/godot-bevy/godot-bevy", features = ["default"] }
reqwest = { version = "0.12.23", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = "1.47.1"
tokio-tungstenite = "0.27.0"
lightyear = { version = "0.23.0", features = ["client", "netcode", "replication", "udp"] }
shared = { version = "0.1.0", path = "../../../shared" }

tracing-subscriber = { version = "0.3.17", features = ["registry"] }

[workspace]
# Empty workspace table to make this a standalone project
